@@ -1,72 +1,99 @@
 /*
- * Created by Angel Leon (@gubatron), Alden Torres (aldenml), alejandroarturom
- * Copyright (c) 2011-2018, FrostWire(R). All rights reserved.
+ * Created by Angel Leon (@gubatron), Alden Torres (aldenml)
+ * Copyright (c) 2011-2020, FrostWire(R). All rights reserved.
  *
- * This program is free software: you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published by
- * the Free Software Foundation, either version 3 of the License, or
- * (at your option) any later version.
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
  *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
+ *      http://www.apache.org/licenses/LICENSE-2.0
  *
- * You should have received a copy of the GNU General Public License
- * along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
 
 package com.frostwire.search.limetorrents;
 
-import com.frostwire.search.CrawlableSearchResult;
+import com.frostwire.regex.Pattern;
 import com.frostwire.search.SearchMatcher;
-import com.frostwire.search.torrent.TorrentRegexSearchPerformer;
+import com.frostwire.search.torrent.TorrentSearchPerformer;
+import com.frostwire.util.Logger;
+
+import java.util.ArrayList;
+import java.util.List;
 
 /**
- * @author alejandroarturom
+ * @author gubatron
  */
-// TODO: this performer does not need to download a torrent to get the details
-public class LimeTorrentsSearchPerformer extends TorrentRegexSearchPerformer<LimeTorrentsSearchResult> {
-    private static final int MAX_RESULTS = 20;
-    private static final String REGEX = "(?is)<a href=\"http://itorrents.org/torrent/(.*?).torrent?(.*?)\" rel=\"nofollow\" class=\"csprite_dl14\"></a><a href=\"(?<itemid>.*?).html?(.*?)\">.*?</a></div>.*?";
-    private static final String HTML_REGEX =
-            "(?is)<title>(?<filename>.*?)</title>.*?" +
-                    "<span class=\"greenish\">Seeders : (?<seeds>\\d*?)</span>.*?" +
-                    "<tr><td align=\"right\"><b>Hash</b> :</td><td>(?<torrentid>.*?)</td></tr>.*?" +
-                    "<tr><td align=\"right\"><b>Added</b> :</td><td>(?<time>.*?) in.*?" +
-                    "<tr><td align=\"right\"><b>Size</b> :</td><td>(?<filesize>.*?) (?<unit>[A-Z]+)</td></tr>.*?" +
-                    "<a href=\"magnet:(?<magnet_part>.*?)\".*?></a>";
+public class LimeTorrentsSearchPerformer extends TorrentSearchPerformer {
+    private static Logger LOG = Logger.getLogger(LimeTorrentsSearchPerformer.class);
+    private final Pattern pattern;
+    public static final String SEARCH_RESULT_PAGE_REGEX =
+            "(?is)<div class=\"tt-name\"><a href=\"http://itorrents.org/torrent/(?<infohash>.*?)\\.torrent\\?title=(?<filename>.*?)\" rel=\"nofollow\" class=\"csprite_dl14\"></a>" +
+                    "<a href=\"/(?<detailUrl>.*?.html)\">(?<title>.*?)</.*?<div class=\"tt-options\"></div></td>.*?" +
+                    "<td class=\"tdnormal\">(?<age>.*?) -.*?</a></td>.*?" + //they do have an HTML-DOM typo there with that weird </a> inside the </td>
+                    "<td class=\"tdnormal\">(?<fileSizeMagnitude>.*?) (?<fileSizeUnit>[A-Z]+)</td>.*?" +
+                    "<td class=\"tdseed\">(?<seeds>.*?)</td>.*?";
 
     public LimeTorrentsSearchPerformer(String domainName, long token, String keywords, int timeout) {
-        super(domainName, token, keywords, timeout, 1, 2 * MAX_RESULTS, MAX_RESULTS, REGEX, HTML_REGEX);
+        super(domainName, token, keywords, timeout, 1, 1);
+        pattern = Pattern.compile(SEARCH_RESULT_PAGE_REGEX);
     }
 
     @Override
     protected String getUrl(int page, String encodedKeywords) {
         String transformedKeywords = encodedKeywords.replace("0%20", "-");
-        return "https://" + getDomainName() + "/search/all/" + transformedKeywords + "/seeds/1/";
+        return "https://" + getDomainName() + "/search/all/" + transformedKeywords + "/leechs/1/";
     }
 
     @Override
-    public CrawlableSearchResult fromMatcher(SearchMatcher matcher) {
-        String itemId = matcher.group("itemid");
-        String transformedId = itemId.replaceFirst("/", "");
-        return new LimeTorrentsTempSearchResult(getDomainName(), transformedId);
+    protected List<LimeTorrentsSearchResult> searchPage(String page) {
+        final String HTML_PREFIX_MARKER = "Health</th>";
+        int htmlPrefixIndex = page.indexOf(HTML_PREFIX_MARKER) + HTML_PREFIX_MARKER.length();
+        final String HTML_SUFFIX_MARKER = "Next page";
+        int htmlSuffixIndex = page.indexOf(HTML_SUFFIX_MARKER);
+        String reducedHtml = page.substring(htmlPrefixIndex, htmlSuffixIndex > 0 ? htmlSuffixIndex : page.length() - htmlPrefixIndex);
+
+        ArrayList<LimeTorrentsSearchResult> results = new ArrayList<>(0);
+        SearchMatcher matcher = new SearchMatcher((pattern.matcher(page)));
+        boolean matcherFound;
+        int MAX_RESULTS = 50;
+        do {
+            try {
+                matcherFound = matcher.find();
+            } catch (Throwable t) {
+                matcherFound = false;
+                LOG.error("searchPage() has failed.\n" + t.getMessage(), t);
+            }
+            if (matcherFound) {
+                LimeTorrentsSearchResult sr = fromMatcher(matcher);
+                if (sr.getSeeds() > 0) {
+                    results.add(sr);
+                }
+                LOG.info("Adding a new search result -> " + sr.getDisplayName() + ":" + sr.getSize() + ":" + sr.getTorrentUrl());
+            } else {
+                LOG.warn("LimeTorrentsSearchPerformer search matcher broken. Please notify at https://github.com/frostwire/frostwire/issues/new");
+            }
+        } while (matcherFound && !isStopped() && results.size() <= MAX_RESULTS);
+        return results;
     }
 
-    @Override
-    protected int htmlSuffixOffset(String html) {
-        int offset = html.indexOf("<div><h3>Latest Searches</h3>");
-        return offset > 0 ? offset : 0;
+    private LimeTorrentsSearchResult fromMatcher(SearchMatcher matcher) {
+        String infoHash = matcher.group("infohash");
+        String detailsURL = "https://" + getDomainName() + "/" + matcher.group("detailUrl");
+        String filename = matcher.group("filename");
+        String title = matcher.group("title");
+        String ageString = matcher.group("age");
+        String fileSizeMagnitude = matcher.group("fileSizeMagnitude");
+        String fileSizeUnit = matcher.group("fileSizeUnit");
+        String seeds = matcher.group("seeds");
+        return new LimeTorrentsSearchResult(detailsURL, infoHash, filename, fileSizeMagnitude, fileSizeUnit, ageString, seeds, title);
     }
 
-    @Override
-    protected LimeTorrentsSearchResult fromHtmlMatcher(CrawlableSearchResult sr, SearchMatcher matcher) {
-        return new LimeTorrentsSearchResult(sr.getDetailsUrl(), matcher);
-    }
-
-    @Override
-    protected boolean isValidHtml(String html) {
-        return html != null && !html.contains("Cloudflare");
+    public static void main(String[] args) {
+        System.out.println(SEARCH_RESULT_PAGE_REGEX);
     }
 }
