@@ -1,8 +1,9 @@
 frostwire (6.8.5) stable; urgency=high
   * OpenJDK 13 runtime (windows,mac)
   * Soundcloud search and downloads fixed
+  * LimeTorrents search and downloads fixed
 
- -- FrostWire Team <contact@frostwire.com>  Tue, 13 Jan 2020 11:38:32 -0600
+ -- FrostWire Team <contact@frostwire.com>  Mon, 20 Jan 2020 22:19:15 -0600
 
 frostwire (6.8.4) stable; urgency=high
   * New jlibtorrent 1.2.3.0 update
