@@ -1,4 +1,4 @@
-FrostWire 2.1.9 build 620 - JAN/19/2020
+FrostWire 2.1.9 build 620 - JAN/20/2020
  - New jlibtorrent 1.2.3
  - libtorrent 1.2.3.0
  - boost 1.72.0 build
@@ -13,6 +13,7 @@ FrostWire 2.1.9 build 620 - JAN/19/2020
  - Music player and notifications framework update
  - MusicPlaybackService lifecycle rewrite
  - SoundCloud search/downloads fixed
+ - LimeTorrents search/downloads fixed
  - android material 1.2.0-alpha03
  - androix browser 1.3.0-alpha01
  - applovin and mopub mediation 9.11.1
